# experiment

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
model_cards/: decision_tree_model_card.md  gradient_boosting_model_card.md  logistic_regression_model_card.md  random_forest_model_card.md  svm_model_card.md
models/: wine_decision_tree.joblib  wine_gradient_boosting.joblib  wine_logistic_regression.joblib  wine_random_forest.joblib  wine_svm.joblib
notebooks/: 01-notebook.ipynb
