[tool.poetry]
name = "experiment"
version = "0.1.0"
description = "A comprehensive guide to classification using machine learning."
authors = ["Emmanuel Arkoh-Nelson <arkohnelsonemmanuel@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.2.2"
seaborn = "^0.13.2"
scikit-learn = "^1.5.1"
ucimlrepo = "^0.0.7"
ipykernel = "^6.29.5"
jupyter = "^1.0.0"
lab = "^8.2"
pipreqs = "^0.5.0"
nbconvert = "^7.16.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
